after user interface is modified2 final

--- a/src/app/modules/home-page/home-page.component.css
+++ b/src/app/modules/home-page/home-page.component.css
@@ -298,7 +298,7 @@
 .GENDER {
   width: 148px;
   height: 24px;
-  font-family: SourceSansPro-Regular;
+  font-family: SourceSansPro-Bold;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
