--- a/src/app/modules/details/detailsview/detailsview.component.html
+++ b/src/app/modules/details/detailsview/detailsview.component.html
@@ -6,7 +6,7 @@
     <div class="res-item-header row">
       <img src="../../../assets/imgs/dentist-female.png" class="imgDentist" />
       <div class="headerD headerDetails">
-        <h3 class="dentistName">Nicole Leigh</h3>
+        <h3 class="dentistName">{{fullName}}</h3>
         <h4 class="specialization">{{ specialty }}</h4>
         <p>
           <svg
@@ -58,31 +58,31 @@
         style="border-collapse: separate; border-spacing: 1em; padding-left: 50px; padding-top: 14px;" >
         <div class="d-sm-table-row schedule">
           <p class="d-sm-table-cell border-right" style="padding-right: 10pt">
-            MON <br />8:00 AM - 3:30 PM
+            MON <br />{{officeTimings[0]}}
           </p>
           <p class="d-sm-table-cell border-right" style="padding-right: 10pt">
-            TUE <br />8:00 AM - 3:30 PM
+            TUE <br />{{officeTimings[1]}}
           </p>
           <p class="d-sm-table-cell border-right" style="padding-right: 10pt">
-            WED <br />8:00 AM - 3:30 PM
+            WED <br />{{officeTimings[2]}}
           </p>
           <p class="d-sm-table-cell border-right" style="padding-right: 10pt">
-            THU <br />8:00 AM - 3:30 PM
+            THU <br />{{officeTimings[3]}}
           </p>
           <p class="d-sm-table-cell border-right" style="padding-right: 10pt">
-            FRI <br />8:00 AM - 3:30 PM
+            FRI <br />{{officeTimings[4]}}
           </p>
           <p class="d-sm-table-cell border-right" style="padding-right: 10pt">
-            SAT <br />CLOSED
+            SAT <br />{{officeTimings[5]}}
           </p>
-          <p class="d-sm-table-cell">SUN <br />CLOSED</p>
+          <p class="d-sm-table-cell">SUN <br />{{officeTimings[6]}}</p>
         </div>
       </div>
     </div>
     <div class="container" style="margin-left: 30px; padding: 33px;">
       <div class="row">
         <div class="col-sm border" style="margin-right: 34px;">
-          <div class="categoryName">CATEGORY NAME</div>
+          <!-- <div class="categoryName">CATEGORY NAME</div> -->
           <div style="margin-top: 30px; margin-left: 22px;">
             <div>
               <div class="subCategories">Plans accepted</div>
@@ -103,7 +103,7 @@
           </div>
         </div>
         <div class="col-sm border" style="margin-right: 34px;">
-          <div class="categoryName">CATEGORY NAME</div>
+          <!-- <div class="categoryName">CATEGORY NAME</div> -->
           <div style="margin-top: 30px; margin-left: 22px;">
             <div>
               <div class="subCategories">State Licences</div>
@@ -115,29 +115,31 @@
             </div>
             <div>
               <div class="subCategories">Board Association</div>
-              <p class="subCValues">Lorem Ipsum</p>
+              <p class="subCValues">American Dental Association</p>
             </div>
           </div>
         </div>
         <div class="col-sm border">
-          <div class="categoryName">CATEGORY NAME</div>
+          <!-- <div class="categoryName">CATEGORY NAME</div> -->
           <div style="margin-top: 30px; margin-left: 22px;">
             <div>
               <div class="subCategories">Accepting new patients</div>
               <p>
-                <img src="../../../assets/icons/checkmark.svg" />
+                <img *ngIf="acceptingNew" src="../../../assets/icons/checkmark.svg" />
+                <img  *ngIf="!acceptingNew" src="../../../assets/icons/crossmark.svg" />
               </p>
             </div>
             <div>
               <div class="subCategories">Handicapped Accessibility</div>
               <p>
-                <img src="../../../assets/icons/crossmark.svg" />
+                <img *ngIf="handicapAccessible" src="../../../assets/icons/checkmark.svg" />
+                <img  *ngIf="!handicapAccessible" src="../../../assets/icons/crossmark.svg" />
               </p>
             </div>
             <div>
               <div class="subCategories">Suggest Directory Update</div>
               <p class="subCValues">
-                Lorem Ipsum
+                <a href="https://www.uhc.com/contact-us">Click here</a>
               </p>
             </div>
           </div>
