--- a/src/app/modules/home-page/home-page.component.css
+++ b/src/app/modules/home-page/home-page.component.css
@@ -146,7 +146,7 @@
 .availability {
   width: 153px;
   height: 24px;
-  font-family: SourceSansPro;
+  font-family: SourceSansPro-Bold;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -185,7 +185,7 @@
 .Extended-Hours {
   width: 183px;
   height: 24px;
-  font-family: SourceSansPro-Regular;
+  font-family: SourceSansPro-Bold;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -270,7 +270,7 @@
 .SECOND-NAME {
   width: 130px;
   height: 24px;
-  font-family: SourceSansPro-Regular;
+  font-family: SourceSansPro-Bold;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
