--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -80,7 +80,7 @@
           </div>
 
           <div style="margin-left:10px; display: inline-block" >
-            <label class="containerLabel" for="LoremIpsum2">Lorem-Ipsum
+            <label class="containerLabel" for="LoremIpsum2"> Maxillofacial Surgeon
             <input  type="checkbox" id="LoremIpsum2">
               <span class="checkmark"></span>
             </label>
@@ -130,7 +130,7 @@
       <div  class="doctorProfile_div">
         <hr class="horizontal-line">
         <div class="DoctorName_div">
-          <label> DOCTOR NAME</label>
+          <label > DOCTOR NAME</label>
           <br>
           <input class="FIRST-NAME" [(ngModel)]="parameter_list.firstName" type="text" id="firstName" name="firstName"
                  placeholder="FIRST NAME">
