after user interface is modified2 final 4

--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -130,7 +130,7 @@
       <div  class="doctorProfile_div">
         <hr class="horizontal-line">
         <div class="DoctorName_div">
-          <label > DOCTOR NAME</label>
+          <label class="doctor2" > DOCTOR NAME</label>
           <br>
           <input class="FIRST-NAME" [(ngModel)]="parameter_list.firstName" type="text" id="firstName" name="firstName"
                  placeholder="FIRST NAME">
