--- a/src/app/modules/home-page/home-page.component.css
+++ b/src/app/modules/home-page/home-page.component.css
@@ -550,3 +550,16 @@
   color: #5a7898;
   padding-left: 13px;
 }
+
+.doctor2{
+  width: 153px;
+  height: 24px;
+  font-family: SourceSansPro-Bold;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: 1.17px;
+  color: #0058c3;
+}
