--- a/src/app/modules/results/result-item/result-item.component.css
+++ b/src/app/modules/results/result-item/result-item.component.css
@@ -12,7 +12,7 @@
   display: inline-block;
 }
 .dentistName {
-  width: 142px;
+  /*width: 142px;*/
   height: 24px;
   font-family: SourceSansPro-Bold;
   font-size: 22px;
@@ -25,7 +25,7 @@
 }
 
 .headerDetails > h4 {
-  width: 288px;
+  /*width: 288px;*/
   height: 18px;
   font-family: SourceSansPro-Bold;
   font-size: 14px;
@@ -37,7 +37,7 @@
   color: #0058c3;
 }
 .headerDetails > span {
-  width: 439px;
+  /*width: 439px;*/
   height: 18px;
   font-family: SourceSansPro-Regular;
   font-size: 14px;
@@ -54,7 +54,7 @@
 }
 .headerDetails > div > span > span {
   color: #5a7898;
-  font-family: SourceSansPro-Bold;
+  font-family: SourceSansPro-Regular;
 }
 .headerDetails > div > span > a {
   color: #5a7898;
@@ -91,7 +91,7 @@ li > h4 {
   color: #5a7898;
 }
 .workHours > div > p {
-  width: 133px;
+  /*width: 133px;*/
   height: 44px;
   font-family: SourceSansPro-Regular;
   font-size: 14px;
