Result items working dynamically

--- a/src/app/modules/results/results-main/results-main.component.css
+++ b/src/app/modules/results/results-main/results-main.component.css
@@ -74,3 +74,11 @@ section {
 /**************************END MAP SECTION*******************/
 
 
+
+/**************************START SEARCHBAR CONTAINER*******************/
+
+#searchBarContainer {
+  height: 90pt;
+}
+/**************************END SEARCHBAR CONTAINER*******************/
+
