--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -16,6 +16,8 @@
 
       <input class="YOUR-location" [(ngModel)]="parameter_list.location" placeholder="YOUR LOCATION">
       <!--      <mat-card class="example-result-card">-->
+
+      <label class="distancetoSearch"> Distance  </label>
       <div class="Rectangle-739-Copy">
         <mat-slider
           [max]="max"
