--- a/src/app/modules/home-page/home-page.component.css
+++ b/src/app/modules/home-page/home-page.component.css
@@ -38,7 +38,7 @@
 
 .Rectangle-3-Copy-3 {
   /*width: 959px;*/
-  width: 761px;
+  width: 843px;
   /*height: 121px;*/
   height: 91px;
   object-fit: contain;
@@ -129,7 +129,22 @@
   margin-left: 10px;
   /*margin-top: 5px;*/
 }
+.distancetoSearch{
+  color: #8f99a3;
+  height: 24px;
+  font-family: SourceSansPro-Regular;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.71;
+  letter-spacing: 1.17px;
+  padding-right: 8px;
+  /*color: #9b9b9b;*/
 
+  border: 1px;
+  padding-left: 12px;
+}
 .Accepting-new-patien {
   width: 148px;
   height: 18px;
@@ -270,7 +285,7 @@
 .SECOND-NAME {
   width: 130px;
   height: 24px;
-  font-family: SourceSansPro-Bold;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
