--- a/src/app/modules/results/results-main/results-main.component.html
+++ b/src/app/modules/results/results-main/results-main.component.html
@@ -14,7 +14,8 @@
         <div id="collapseSpecialization" class="panel-collapse collapse show">
 
           <label class="containerLabel" for="cbxOralSurgeon">Oral Surgeon
-            <input type="checkbox" id="cbxOralSurgeon">
+            <input *ngIf="searchParams.specialization" type="checkbox" checked id="cbxOralSurgeon">
+<!--            <input type="checkbox" checked id="cbxOralSurgeon">-->
             <span class="checkmark"></span>
           </label>
 
@@ -42,9 +43,13 @@
       <h4 class="panel-title filter-title">
         GENDER
       </h4>
-      <div class="btn-group btn-toggle gender">
-        <input type="button" name="gender" class="btn btn-default" value="Male">
-        <input type="button" name="gender" class="btn btn-primary active" value="Female">
+      <div *ngIf="searchParams.gender == 'F'" class="btn-group btn-toggle gender">
+        <input type="button" name="gender" class="btn btn-default" value="Male" (click)="selectMaleFilter()">
+        <input type="button" name="gender" class="btn btn-primary active" value="Female" (click)="selectFemaleFilter()">
+      </div>
+      <div *ngIf="searchParams.gender !== 'F'" class="btn-group btn-toggle gender">
+        <input type="button" name="gender" class="btn btn-primary active" value="Male" (click)="selectMaleFilter()">
+        <input type="button" name="gender" class="btn btn-default" value="Female" (click)="selectFemaleFilter()">
       </div>
     </div>
 
