--- a/src/app/modules/home-page/home-page.component.css
+++ b/src/app/modules/home-page/home-page.component.css
@@ -193,7 +193,7 @@
 .Extended-Hours {
   width: 183px;
   height: 24px;
-  font-family: SourceSansPro-Bold;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
@@ -316,7 +316,7 @@
 .GENDER {
   width: 148px;
   height: 24px;
-  font-family: SourceSansPro-Bold;
+  font-family: SourceSansPro-Regular;
   font-size: 14px;
   font-weight: normal;
   font-stretch: normal;
