--- a/src/app/modules/results/results-main/results-main.component.html
+++ b/src/app/modules/results/results-main/results-main.component.html
@@ -1,5 +1,5 @@
 <div id="searchBarContainer">
-
+  <app-search-compenent></app-search-compenent>
 </div>
 <div class="row">
   <section class="col-lg-2" id="filtersContainer">
