--- a/src/app/modules/home-page/home-page.component.html
+++ b/src/app/modules/home-page/home-page.component.html
@@ -4,7 +4,7 @@
 
   <div class="Captura-de-Pantalla-2020-03-25-a-las-155236">
     <!--    <label class="choose-plan"> Plans </label> <border-radius>-->
-    <div class="Rectangle-3-Copy-3" style="width: 1010px; height: 121px;">
+    <div class="Rectangle-3-Copy-3" style="width: 71%; height: 121px;">
       <div style="padding-top: 27px; padding-left: 27px; padding-left: 21px;">
         <select
           id="plan"
@@ -73,7 +73,7 @@
     <div
       class="zIndex"
       [hidden]="!isAdvancedSearchButtonCliked"
-      style="width: 1010px; position: relative; bottom: 16px;"
+      style="width: 71%; position: relative; bottom: 16px;"
     >
       <hr class="horizontal-line" />
       <div class="row">
