--- a/src/app/modules/home-page/home-page.component.css
+++ b/src/app/modules/home-page/home-page.component.css
@@ -97,10 +97,10 @@
 }
 
 .footer {
-  margin-left: 300px;
+  margin-left: 15%;
   z-index: -1;
   position: absolute;
-  margin-top: 400px;
+  margin-top: 30%;
 
   /*height: 498px ;*/
   /*margin-top: 100px;*/
@@ -484,8 +484,8 @@
 }
 
 .maindiv {
-  width: 1439px;
-  height: 1000px;
+  width: 100%;
+  height: 100%;
   border: 1px;
   border-color: red;
 
