--- a/src/app/modules/results/results-main/results-main.component.html
+++ b/src/app/modules/results/results-main/results-main.component.html
@@ -1,5 +1,36 @@
 <div id="searchBarContainer">
-  <app-search-compenent></app-search-compenent>
+<!--  <app-search-compenent [searchParams]="searchParams"></app-search-compenent>-->
+
+  <div class="Rectangle-3-Copy-3">
+
+    <select id="plan" [(ngModel)]="searchParams.plans" #plan class="DENTAL-PLAN-Select"
+            (change)="onPlanChange(plan.value)">
+<!--      <option class="DENTAL-PLAN" value ="" selected> Choose Dental Plan</option>-->
+      <option class="DENTAL-PLAN" value="National Options PPO 20">National Options PPO 20</option>
+      <option class="DENTAL-PLAN" value="National Select Managed Care" selected>National Select Managed Care</option>
+      <option class="DENTAL-PLAN" value="National Options PPO 30"> National Options PPO 30</option>
+    </select>
+
+    <input class="YOUR-location" [(ngModel)]="searchParams.location" placeholder="Your Location" value="{{searchParams.location}}">
+    <!--      <mat-card class="example-result-card">-->
+
+    <label class="distancetoSearch"> Distance  </label>
+    <div class="Rectangle-739-Copy">
+      <mat-slider
+        [max]="max"
+        [min]="min"
+        [step]="step"
+        [thumbLabel]="thumbLabel"
+        [tickInterval]="getSliderTickInterval()"
+        [(ngModel)]="searchParams.distanceFromYourAddress"
+      >
+      </mat-slider>
+    </div>
+
+    <!--===============================================-->
+    <button class="AdvancedSEARCH_div btn btn-primary" (click)="filterByPlan_And_Location_Distance()"> Search</button>
+  </div>
+
 </div>
 <div class="row">
   <section class="col-lg-2" id="filtersContainer">
@@ -14,23 +45,26 @@
         <div id="collapseSpecialization" class="panel-collapse collapse show">
 
           <label class="containerLabel" for="cbxOralSurgeon">Oral Surgeon
-            <input *ngIf="searchParams.specialization" type="checkbox" checked id="cbxOralSurgeon"  (change)="onSpecializationCheckboxChanged('OralSurgeon')">
-<!--            <input type="checkbox" checked id="cbxOralSurgeon">-->
+            <input *ngIf="searchParams.specializationMap.get('OralSurgeon')" type="checkbox" checked id="cbxOralSurgeon"  (change)="onSpecializationCheckboxChanged('OralSurgeon')">
+            <input *ngIf="!searchParams.specializationMap.get('OralSurgeon')" type="checkbox" id="cbxOralSurgeon"  (change)="onSpecializationCheckboxChanged('OralSurgeon')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxEndodontist">Endodontist
-            <input type="checkbox" id="cbxEndodontist" (change)="onSpecializationCheckboxChanged('Endodontist')">
+            <input *ngIf="searchParams.specializationMap.get('Endodontist')" checked type="checkbox" id="cbxEndodontist" (change)="onSpecializationCheckboxChanged('Endodontist')">
+            <input *ngIf="!searchParams.specializationMap.get('Endodontist')" type="checkbox" id="cbxEndodontist" (change)="onSpecializationCheckboxChanged('Endodontist')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxMaxiSurgeon" (change)="onSpecializationCheckboxChanged('MaxillofacialSurgeon')">Maxillofacial Surgeon
-            <input type="checkbox" id="cbxMaxiSurgeon">
+            <input *ngIf="searchParams.specializationMap.get('MaxillofacialSurgeon')" checked type="checkbox" id="cbxMaxiSurgeon">
+            <input *ngIf="!searchParams.specializationMap.get('MaxillofacialSurgeon')" type="checkbox" id="cbxMaxiSurgeon">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxPediatric" (change)="onSpecializationCheckboxChanged('Pediatric')">Pediatric
-            <input type="checkbox" id="cbxPediatric">
+            <input *ngIf="searchParams.specializationMap.get('Pediatric')" checked type="checkbox" id="cbxPediatric">
+            <input *ngIf="!searchParams.specializationMap.get('Pediatric')" type="checkbox" id="cbxPediatric">
             <span class="checkmark"></span>
           </label>
         </div>
@@ -66,94 +100,109 @@
         <div id="collapseLanguages" class="panel-collapse collapse show">
 
           <label class="containerLabel" for="cbxArabic">Arabic
-            <input type="checkbox" id="cbxArabic" (change)="onLangCheckboxChanged('Arabic')">
+            <input  *ngIf="searchParams.languageMap.get('Arabic')" type="checkbox" checked id="cbxArabic" (change)="onLangCheckboxChanged('Arabic')">
+            <input  *ngIf="!searchParams.languageMap.get('Arabic')" type="checkbox" id="cbxArabic" (change)="onLangCheckboxChanged('Arabic')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxSpanish">Spanish
-            <input type="checkbox" id="cbxSpanish" (change)="onLangCheckboxChanged('Spanish')">
+            <input *ngIf="searchParams.languageMap.get('Spanish')" checked type="checkbox" id="cbxSpanish" (change)="onLangCheckboxChanged('Spanish')">
+            <input *ngIf="!searchParams.languageMap.get('Spanish')" type="checkbox" id="cbxSpanish" (change)="onLangCheckboxChanged('Spanish')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxGerman">German
-            <input type="checkbox" id="cbxGerman" (change)="onLangCheckboxChanged('German')">
+            <input *ngIf="searchParams.languageMap.get('German')" checked type="checkbox" id="cbxGerman" (change)="onLangCheckboxChanged('German')">
+            <input *ngIf="!searchParams.languageMap.get('German')" type="checkbox" id="cbxGerman" (change)="onLangCheckboxChanged('German')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxRomanian">Romanian
-            <input type="checkbox" id="cbxRomanian" (change)="onLangCheckboxChanged('Romanian')">
+            <input *ngIf="searchParams.languageMap.get('Romanian')" checked type="checkbox" id="cbxRomanian" (change)="onLangCheckboxChanged('Romanian')">
+            <input *ngIf="!searchParams.languageMap.get('Romanian')" type="checkbox" id="cbxRomanian" (change)="onLangCheckboxChanged('Romanian')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxFrench">French
-            <input type="checkbox" id="cbxFrench" (change)="onLangCheckboxChanged('French')">
+            <input *ngIf="searchParams.languageMap.get('French')" checked type="checkbox" id="cbxFrench" (change)="onLangCheckboxChanged('French')">
+            <input *ngIf="!searchParams.languageMap.get('French')" type="checkbox" id="cbxFrench" (change)="onLangCheckboxChanged('French')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxHindi">Hindi
-            <input type="checkbox" id="cbxHindi" (change)="onLangCheckboxChanged('Hindi')">
+            <input *ngIf="searchParams.languageMap.get('Hindi')" checked type="checkbox" id="cbxHindi" (change)="onLangCheckboxChanged('Hindi')">
+            <input *ngIf="!searchParams.languageMap.get('Hindi')" type="checkbox" id="cbxHindi" (change)="onLangCheckboxChanged('Hindi')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxItalian">Italian
-            <input type="checkbox" id="cbxItalian" (change)="onLangCheckboxChanged('Italian')">
+            <input *ngIf="searchParams.languageMap.get('Italian')" checked type="checkbox" id="cbxItalian" (change)="onLangCheckboxChanged('Italian')">
+            <input *ngIf="!searchParams.languageMap.get('Italian')" type="checkbox" id="cbxItalian" (change)="onLangCheckboxChanged('Italian')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxRussian">Russian
-            <input type="checkbox" id="cbxRussian" (change)="onLangCheckboxChanged('Russian')">
+            <input *ngIf="searchParams.languageMap.get('Russian')" checked type="checkbox" id="cbxRussian" (change)="onLangCheckboxChanged('Russian')">
+            <input *ngIf="!searchParams.languageMap.get('Russian')" type="checkbox" id="cbxRussian" (change)="onLangCheckboxChanged('Russian')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxKorean">Korean
-            <input type="checkbox" id="cbxKorean" (change)="onLangCheckboxChanged('Korean')">
+            <input *ngIf="searchParams.languageMap.get('Korean')" checked type="checkbox" id="cbxKorean" (change)="onLangCheckboxChanged('Korean')">
+            <input *ngIf="!searchParams.languageMap.get('Korean')" type="checkbox" id="cbxKorean" (change)="onLangCheckboxChanged('Korean')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxPortugese">Portugese
-            <input type="checkbox" id="cbxPortugese" (change)="onLangCheckboxChanged('Portugese')">
+            <input *ngIf="searchParams.languageMap.get('Portugese')" checked type="checkbox" id="cbxPortugese" (change)="onLangCheckboxChanged('Portugese')">
+            <input *ngIf="!searchParams.languageMap.get('Portugese')" type="checkbox" id="cbxPortugese" (change)="onLangCheckboxChanged('Portugese')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxChinese">Chinese
-            <input type="checkbox" id="cbxChinese" (change)="onLangCheckboxChanged('Chinese')">
+            <input *ngIf="searchParams.languageMap.get('Chinese')" checked type="checkbox" id="cbxChinese" (change)="onLangCheckboxChanged('Chinese')">
+            <input *ngIf="!searchParams.languageMap.get('Chinese')" type="checkbox" id="cbxChinese" (change)="onLangCheckboxChanged('Chinese')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxEgyptian">Egyptian
-            <input type="checkbox" id="cbxEgyptian" (change)="onLangCheckboxChanged('Egyptian')">
+            <input *ngIf="searchParams.languageMap.get('Egyptian')" checked type="checkbox" id="cbxEgyptian" (change)="onLangCheckboxChanged('Egyptian')">
+            <input *ngIf="!searchParams.languageMap.get('Egyptian')" type="checkbox" id="cbxEgyptian" (change)="onLangCheckboxChanged('Egyptian')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxFarsi">Farsi
-            <input type="checkbox" id="cbxFarsi" (change)="onLangCheckboxChanged('Farsi')">
+            <input *ngIf="searchParams.languageMap.get('Farsi')" checked type="checkbox" id="cbxFarsi" (change)="onLangCheckboxChanged('Farsi')">
+            <input *ngIf="!searchParams.languageMap.get('Farsi')" type="checkbox" id="cbxFarsi" (change)="onLangCheckboxChanged('Farsi')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxPolish">Polish
-            <input type="checkbox" id="cbxPolish" (change)="onLangCheckboxChanged('Polish')">
+            <input *ngIf="searchParams.languageMap.get('Polish')" checked type="checkbox" id="cbxPolish" (change)="onLangCheckboxChanged('Polish')">
+            <input *ngIf="!searchParams.languageMap.get('Polish')" type="checkbox" id="cbxPolish" (change)="onLangCheckboxChanged('Polish')">
             <span class="checkmark"></span>
           </label>
 
           <label class="containerLabel" for="cbxGreek">Greek
-            <input type="checkbox" id="cbxGreek" (change)="onLangCheckboxChanged('Greek')">
+            <input *ngIf="searchParams.languageMap.get('Greek')" checked type="checkbox" id="cbxGreek" (change)="onLangCheckboxChanged('Greek')">
+            <input *ngIf="!searchParams.languageMap.get('Greek')" type="checkbox" id="cbxGreek" (change)="onLangCheckboxChanged('Greek')">
             <span class="checkmark"></span>
           </label>
         </div>
       </div>
     </div>
 
-    <hr class="filterDivider">
+    <!--<hr class="filterDivider">
 
     <div class="panel-group">
       <h4 class="panel-title filter-title">
         ACCESSIBILITY
       </h4>
-      <!--<label class="containerLabel" for="tglHandicapAccessible" style="padding-left: 0;">Handicap Accessible
+      &lt;!&ndash;<label class="containerLabel" for="tglHandicapAccessible" style="padding-left: 0;">Handicap Accessible
 &lt;!&ndash;        <input type="checkbox" checked data-toggle="toggle" data-size="xs">&ndash;&gt;
         <input type="checkbox" id="tglHandicapAccessible" checked data-toggle="toggle" data-style="ios" data-height="2" data-width="5" data-size="xs" data-on="Yes" data-off="No" >
 &lt;!&ndash;        <span class="checkmark"></span>&ndash;&gt;
-      </label>-->
+      </label>&ndash;&gt;
       <span>
 
         <label class="switch" for="tglHandicapAccessible"><span>Handicap Accessible</span>
@@ -161,7 +210,7 @@
           <span class="slider round"></span>
         </label>
       </span>
-    </div>
+    </div>-->
   </section>
 
 
